<resources>
    <string name="app_name">GlARss Phone</string>
    <string name="welcome_text">Hello. Feel free to take a photo of yourself.</string>
    <string name="next">Next</string>
    <string name="take_photo">Take Picture</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string name="email">E-Mail</string>
    <string name="title_activity_one">oneActivity</string>
    <string name="done">Well done!</string>
    <string name="done_details">Registration was successful and you are tracked now. Feel free to quit this app.</string>
</resources>
